<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sixteen">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>